# ms-agents-api

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml
app/api/: lifespan.py  main_router.py  server.py
app/api/dependencies/: connectors.py  mongo.py  repositories.py
app/api/v1/: router.py
app/core/: logging.py  settings.py
app/core/connectors/: base.py  mongo.py
app/entities/: agents.py  base.py  dummy.py  knowledge_bases.py  tools.py
app/exceptions/: agents.py  http.py  knowledge_bases.py  tools.py
app/repositories/agents/: mongo.py
app/repositories/base/: __init__.py  mongo.py
app/repositories/knowledge_bases/: mongo.py
app/repositories/mongo/: dummy.py
app/repositories/tools/: mongo.py
app/schemas/agents/: __init__.py  agent_create.py  agents_list.py  base_schema.py
app/schemas/knowledge_bases/: knowledge_base_create.py  knowledge_bases_list.py
app/schemas/tools/: tool_create.py  tools_list.py
app/use_cases/agents/: __init__.py  create_agent.py  delete_agents.py  list_agents.py
app/use_cases/knowledge_bases/: create_knowledge_base.py  delete_knowledge_bases.py  list_knowledge_bases.py
app/use_cases/tools/: create_tool.py  delete_tools.py  list_tools.py
app/utils/: __init__.py  build_filters.py  datetime.py
scripts/: install_hooks.sh  pre-push
tests/: conftest.py
tests/integration/: test_api_agents.py  test_api_knowledge_bases.py  test_api_tools.py
tests/unit/: test_agents_use_cases.py  test_knowledge_bases_use_cases.py  test_tools_use_cases.py
(+9 files in other folders)
